# image_processing

./: .gitattributes  .gitmodules  README.md  Resources.md
docs/: Discrete_Signal_Processing_for_Image_Analysis_and_related_Algorithms.docx  FastMarchingMethod_for_Outpainting.docx  Figures_for_FastMarchingMethod_for_Outpainting.pptx  InpaintingFundamentalsFigures.pptx  Inpainting_Fundamentals.docx  Notes_on_Optimal_Approximations_by_Piecewise_Smooth_Functions_and_Associated_Variational_Problems.docx  Notes_on_Statistical_Pattern_Recognition.docx  Notes_on_Variational_Methods_for_Graphical_Models_by_Jordan_1999.docx  OpenSourceImageProcessingLibrariesAndDemoCode.docx
src/demo_code/scikit-image-demo/: README.md  pyproject.toml
src/demo_code/scikit-image-demo/notebooks/: gradient_and_edge_detection_example.ipynb
src/demo_code/scikit-image-demo/scikit_image_demo/: active_contour_model_example.py  blob_detection_example.py  censure_feature_example.py  contour_finding_example.py  convex_hull_algorithm_example.py  dense_daisy_feature_description_example.py  image_rescale_example.py  skeletonize_example.py
